fix(Page): Keep sidebar collapsed between sizes

--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -353,7 +353,7 @@
   // Desktop
   // Collapse nav
   &.pf-m-collapsed {
-    @media screen and (min-width: $pf-global--breakpoint--md) {
+    @media screen {
       max-width: 0;
       overflow: hidden;
     }
